# openapi/openapi.yaml
@@ -48,6 +48,7 @@ paths:
           required: true
           schema:
             type: integer
+            format: uint
       requestBody:
         description: The task data to update
         required: true
@@ -72,6 +73,7 @@ paths:
           required: true
           schema:
             type: integer
+            format: uint
       responses:
         '204':
           description: Task successfully deleted
@@ -100,7 +102,7 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/User'
+              $ref: '#/components/schemas/UserCreate'
       responses:
         '201':
           description: The created user
@@ -120,13 +122,14 @@ paths:
           required: true
           schema:
             type: integer
+            format: uint
       requestBody:
         description: The user data to update
         required: true
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/User'
+              $ref: '#/components/schemas/UserUpdate'
       responses:
         '200':
           description: The updated user
@@ -144,6 +147,7 @@ paths:
           required: true
           schema:
             type: integer
+            format: uint
       responses:
         '204':
           description: User successfully deleted
@@ -159,6 +163,7 @@ paths:
           required: true
           schema:
             type: integer
+            format: uint
       responses:
         '200':
           description: A list of tasks for the user
@@ -176,16 +181,21 @@ components:
       properties:
         id:
           type: integer
+          format: uint
         task:
           type: string
         is_done:
           type: boolean
         user_id:
           type: integer
+          format: uint
           description: The ID of the user who owns this task
 
     TaskCreate:
       type: object
+      required:
+        - task
+        - user_id
       properties:
         task:
           type: string
@@ -194,21 +204,30 @@ components:
           default: false
         user_id:
           type: integer
+          format: uint
           description: The ID of the user who owns this task
 
     TaskUpdate:
       type: object
+      required:
+        - task
+        - is_done
       properties:
         task:
           type: string
         is_done:
           type: boolean
+        user_id:
+          type: integer
+          format: uint
+          description: The ID of the user who owns this task
 
     User:
       type: object
       properties:
         id:
           type: integer
+          format: uint
         email:
           type: string
           format: email
@@ -224,3 +243,25 @@ components:
           type: string
           format: date-time
           nullable: true
+          description: Null if user is active
+
+    UserCreate:
+      type: object
+      required:
+        - email
+        - password
+      properties:
+        email:
+          type: string
+          format: email
+        password:
+          type: string
+
+    UserUpdate:
+      type: object
+      properties:
+        email:
+          type: string
+          format: email
+        password:
+          type: string
